--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/augment-backend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/augment-backend:linux
 
   deploy:
     runs-on: ubuntu-latest
